# copilot-status-ring

./: .copilot-command-ring.local.json.example  .gitignore  .markdownlint-cli2.jsonc  LICENSE  README.md  ROADMAP.md  SPEC.md  install.sh  pyproject.toml
.github/: CAPABILITIES.md  copilot-instructions.md
.github/agents/: agent-creator.agent.md  circuitpython-analyst.agent.md  circuitpython-builder.agent.md  circuitpython-orchestrator.agent.md  circuitpython-reviewer.agent.md  circuitpython-tester.agent.md  fast-runner.agent.md  idea-incubator.agent.md  product-researcher.agent.md
.github/copilot/: settings.local.example.json
.github/hooks/: copilot-command-ring.json  run-hook.ps1  run-hook.sh
.github/instructions/: project.instructions.md  (+1 more)
docs/: hardware.md  hook-events.md  setup-linux.md  setup-macos.md  setup-status-ring.md  setup-windows.md  troubleshooting.md
scripts/: open-copilot.cmd  open-copilot.command  open-copilot.sh  open-terminal.cmd  open-terminal.command  open-terminal.sh  simulate-hooks.ps1  simulate-hooks.sh  validate-platform.ps1  validate-platform.sh
tests/: __init__.py  conftest.py  test_boards.py  test_cli_unit.py  test_config.py  test_deploy.py  test_doctor.py  test_event_normalization.py  test_firmware_cross_variant.py  test_firmware_install.py  test_firmware_priority.py  test_firmware_transient_policy.py  test_hook_main_unit.py  test_install_script.py  test_integration.py  test_logging_util.py  test_port_detection.py  test_protocol.py  test_sender.py  test_serial_lock.py  test_setup_wizard.py  test_simulate.py  test_simulate_unit.py
(+71 files in other folders)
